feature: remove delete data form by name in index.ejs and refactor: server.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,6 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-
     <title>Tutorial database</title>
   </head>
   <body>
@@ -96,20 +95,7 @@
       </form>
       <br>
       <form action="/delete" method="post">
-        <h3>Hapus data (Isi salah satu field atau keduanya)</h3>
-        <div class="row mb-3">
-          <label for="namaMahasiswa" class="col-sm-2 col-form-label"
-            >Nama Mahasiswa</label
-          >
-          <div class="col-sm-10">
-            <input
-              type="text"
-              class="form-control"
-              id="namaMahasiswa"
-              name="nama"
-            />
-          </div>
-        </div>
+        <h3>Hapus data</h3>
         <div class="row mb-3">
           <label for="IDMahasiswa" class="col-sm-2 col-form-label">ID</label>
           <div class="col-sm-10">
